--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "scripts": {
 
 
-
-
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "rimraf -r ./cypress/reports/*.json ",
+    "test": "npm run cypress-test || npm run posttest",
+    "cypress-test": "cypress run",
+    "posttest": "npm run merge-reports && npm run generate-html-report",
+    "merge-reports": "mochawesome-merge ./cypress/reports/*.json > ./report1.json",
+    "generate-html-report": "marge ./report1.json --reportDir ./cypress/reports"
+    
+    
 
 
 
